# Tamagitto

./: .gitignore  sprite.html  tamagitto-spec.md
backend/: alembic.ini  database.py  main.py  pyproject.toml  start.sh  test_ai_integration.py
backend/agents/: __init__.py  code_analysis_agent.py
backend/alembic/: env.py
backend/models/: __init__.py  commit_analysis.py  entity.py  health_history.py  repository.py  user.py  user_session.py
backend/routers/: __init__.py  ai_analysis.py  analysis.py  auth.py  entities.py  repositories.py  webhooks.py  websocket.py
backend/services/: __init__.py  analysis_service.py  auth_service.py  entity_service.py  github_service.py  webhook_service.py  websocket_service.py
backend/tamagitto_backend/: __init__.py
backend/tests/contract/: test_analysis_contracts.py  test_auth_contracts.py  test_entity_contracts.py  test_repository_contracts.py
backend/tests/integration/: test_user_integration.py
extension/: .eslintrc.js  background.js  content.css  content.js  hello.html  manifest.json  package.json  popup.html  popup.js
extension/styles/: popup.css
infrastructure/: .env.example  Caddyfile  Dockerfile  docker-compose.yml
specs/tamagitto/: CLAUDE.md  data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/tamagitto/contracts/: api-contracts.md  extension-contracts.md
sprite-extension/: background.js  content.js  manifest.json
static-site/: index.html
